@@ -27,8 +27,8 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
-import java.util.Arrays;
-import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 import java.util.stream.IntStream;
 
 import static org.apache.kafka.coordinator.common.runtime.CoordinatorRuntimeMetricsImpl.BATCH_FLUSH_TIME_METRIC_NAME;
@@ -39,17 +39,19 @@ import static org.apache.kafka.coordinator.common.runtime.CoordinatorRuntimeMetr
 import static org.apache.kafka.coordinator.common.runtime.KafkaMetricHistogram.MAX_LATENCY_MS;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class CoordinatorRuntimeMetricsImplTest {
 
     private static final String METRICS_GROUP = "test-runtime-metrics";
-    
+    private static final String OTHER_METRICS_GROUP = "test-runtime-metrics-2";
+
     @Test
     public void testMetricNames() {
         Metrics metrics = new Metrics();
 
-        HashSet<org.apache.kafka.common.MetricName> expectedMetrics = new HashSet<>(Arrays.asList(
+        Set<org.apache.kafka.common.MetricName> expectedMetrics = Set.of(
             kafkaMetricName(metrics, NUM_PARTITIONS_METRIC_NAME, "state", "loading"),
             kafkaMetricName(metrics, NUM_PARTITIONS_METRIC_NAME, "state", "active"),
             kafkaMetricName(metrics, NUM_PARTITIONS_METRIC_NAME, "state", "failed"),
@@ -77,7 +79,7 @@ public class CoordinatorRuntimeMetricsImplTest {
             kafkaMetricName(metrics, "batch-flush-time-ms-p95"),
             kafkaMetricName(metrics, "batch-flush-time-ms-p99"),
             kafkaMetricName(metrics, "batch-flush-time-ms-p999")
-        ));
+        );
 
         try (CoordinatorRuntimeMetricsImpl runtimeMetrics = new CoordinatorRuntimeMetricsImpl(metrics, METRICS_GROUP)) {
             runtimeMetrics.registerEventQueueSizeGauge(() -> 0);
@@ -111,6 +113,26 @@ public class CoordinatorRuntimeMetricsImplTest {
     }
 
     @Test
+    public void testNumPartitionsMetricsGroupIsolation() {
+        Metrics metrics = new Metrics();
+
+        try (CoordinatorRuntimeMetricsImpl runtimeMetrics = new CoordinatorRuntimeMetricsImpl(metrics, METRICS_GROUP);
+             CoordinatorRuntimeMetricsImpl runtimeMetrics2 = new CoordinatorRuntimeMetricsImpl(metrics, OTHER_METRICS_GROUP)) {
+            IntStream.range(0, 3)
+                .forEach(__ -> runtimeMetrics.recordPartitionStateChange(CoordinatorState.INITIAL, CoordinatorState.LOADING));
+            IntStream.range(0, 2)
+                .forEach(__ -> runtimeMetrics.recordPartitionStateChange(CoordinatorState.LOADING, CoordinatorState.ACTIVE));
+            IntStream.range(0, 1)
+                .forEach(__ -> runtimeMetrics.recordPartitionStateChange(CoordinatorState.ACTIVE, CoordinatorState.FAILED));
+
+            for (String state : List.of("loading", "active", "failed")) {
+                assertMetricGauge(metrics, kafkaMetricName(metrics, NUM_PARTITIONS_METRIC_NAME, "state", state), 1);
+                assertMetricGauge(metrics, otherGroupKafkaMetricName(metrics, NUM_PARTITIONS_METRIC_NAME, "state", state), 0);
+            }
+        }
+    }
+
+    @Test
     public void testPartitionLoadSensorMetrics() {
         Time time = new MockTime();
         Metrics metrics = new Metrics(time);
@@ -131,6 +153,29 @@ public class CoordinatorRuntimeMetricsImplTest {
         }
     }
 
+    @ParameterizedTest
+    @ValueSource(strings = {
+        "partition-load-time-avg",
+        "partition-load-time-max"
+    })
+    public void testPartitionLoadSensorMetricsGroupIsolation(String name) {
+        Time time = new MockTime();
+        Metrics metrics = new Metrics(time);
+
+        try (CoordinatorRuntimeMetricsImpl runtimeMetrics = new CoordinatorRuntimeMetricsImpl(metrics, METRICS_GROUP);
+             CoordinatorRuntimeMetricsImpl runtimeMetrics2 = new CoordinatorRuntimeMetricsImpl(metrics, OTHER_METRICS_GROUP)) {
+            long startTimeMs = time.milliseconds();
+            runtimeMetrics.recordPartitionLoadSensor(startTimeMs, startTimeMs + 1000);
+
+            org.apache.kafka.common.MetricName metricName = kafkaMetricName(metrics, name);
+            org.apache.kafka.common.MetricName otherGroupMetricName = otherGroupKafkaMetricName(metrics, name);
+            KafkaMetric metric = metrics.metrics().get(metricName);
+            KafkaMetric otherMetric = metrics.metrics().get(otherGroupMetricName);
+            assertNotEquals(Double.NaN, metric.metricValue());
+            assertEquals(Double.NaN, otherMetric.metricValue());
+        }
+    }
+
     @Test
     public void testThreadIdleSensor() {
         Time time = new MockTime();
@@ -145,6 +190,22 @@ public class CoordinatorRuntimeMetricsImplTest {
     }
 
     @Test
+    public void testThreadIdleSensorMetricsGroupIsolation() {
+        Time time = new MockTime();
+        Metrics metrics = new Metrics(time);
+
+        try (CoordinatorRuntimeMetricsImpl runtimeMetrics = new CoordinatorRuntimeMetricsImpl(metrics, METRICS_GROUP);
+             CoordinatorRuntimeMetricsImpl runtimeMetrics2 = new CoordinatorRuntimeMetricsImpl(metrics, OTHER_METRICS_GROUP)) {
+            runtimeMetrics.recordThreadIdleTime(1000.0);
+
+            org.apache.kafka.common.MetricName metricName = kafkaMetricName(metrics, "thread-idle-ratio-avg");
+            org.apache.kafka.common.MetricName otherGroupMetricName = otherGroupKafkaMetricName(metrics, "thread-idle-ratio-avg");
+            assertNotEquals(0.0, metrics.metrics().get(metricName).metricValue());
+            assertEquals(0.0, metrics.metrics().get(otherGroupMetricName).metricValue());
+        }
+    }
+
+    @Test
     public void testEventQueueSize() {
         Time time = new MockTime();
         Metrics metrics = new Metrics(time);
@@ -152,6 +213,21 @@ public class CoordinatorRuntimeMetricsImplTest {
         try (CoordinatorRuntimeMetricsImpl runtimeMetrics = new CoordinatorRuntimeMetricsImpl(metrics, METRICS_GROUP)) {
             runtimeMetrics.registerEventQueueSizeGauge(() -> 5);
             assertMetricGauge(metrics, kafkaMetricName(metrics, "event-queue-size"), 5);
+        }
+    }
+
+    @Test
+    public void testEventQueueSizeMetricsGroupIsolation() {
+        Time time = new MockTime();
+        Metrics metrics = new Metrics(time);
+
+        try (CoordinatorRuntimeMetricsImpl runtimeMetrics = new CoordinatorRuntimeMetricsImpl(metrics, METRICS_GROUP);
+             CoordinatorRuntimeMetricsImpl otherRuntimeMetrics = new CoordinatorRuntimeMetricsImpl(metrics, OTHER_METRICS_GROUP)) {
+            runtimeMetrics.registerEventQueueSizeGauge(() -> 5);
+            otherRuntimeMetrics.registerEventQueueSizeGauge(() -> 0);
+
+            assertMetricGauge(metrics, kafkaMetricName(metrics, "event-queue-size"), 5);
+            assertMetricGauge(metrics, otherGroupKafkaMetricName(metrics, "event-queue-size"), 0);
         }
     }
 
@@ -205,6 +281,45 @@ public class CoordinatorRuntimeMetricsImplTest {
         assertEquals(999.0, metric.metricValue());
     }
 
+    @ParameterizedTest
+    @ValueSource(strings = {
+        EVENT_QUEUE_TIME_METRIC_NAME,
+        EVENT_PROCESSING_TIME_METRIC_NAME,
+        EVENT_PURGATORY_TIME_METRIC_NAME,
+        BATCH_FLUSH_TIME_METRIC_NAME
+    })
+    public void testHistogramMetricsGroupIsolation(String metricNamePrefix) {
+        Time time = new MockTime();
+        Metrics metrics = new Metrics(time);
+
+        try (CoordinatorRuntimeMetricsImpl runtimeMetrics = new CoordinatorRuntimeMetricsImpl(metrics, METRICS_GROUP);
+             CoordinatorRuntimeMetricsImpl runtimeMetrics2 = new CoordinatorRuntimeMetricsImpl(metrics, OTHER_METRICS_GROUP)) {
+            switch (metricNamePrefix) {
+                case EVENT_QUEUE_TIME_METRIC_NAME:
+                    runtimeMetrics.recordEventQueueTime(1000);
+                    break;
+                case EVENT_PROCESSING_TIME_METRIC_NAME:
+                    runtimeMetrics.recordEventProcessingTime(1000);
+                    break;
+                case EVENT_PURGATORY_TIME_METRIC_NAME:
+                    runtimeMetrics.recordEventPurgatoryTime(1000);
+                    break;
+                case BATCH_FLUSH_TIME_METRIC_NAME:
+                    runtimeMetrics.recordFlushTime(1000);
+            }
+
+            // Check metric group isolation
+            for (String suffix : List.of("-max", "-p50", "-p95", "-p99", "-p999")) {
+                org.apache.kafka.common.MetricName metricName = kafkaMetricName(metrics, metricNamePrefix + suffix);
+                org.apache.kafka.common.MetricName otherGroupMetricName = otherGroupKafkaMetricName(metrics, metricNamePrefix + suffix);
+                KafkaMetric metric = metrics.metrics().get(metricName);
+                KafkaMetric otherMetric = metrics.metrics().get(otherGroupMetricName);
+                assertNotEquals(0.0, metric.metricValue());
+                assertEquals(0.0, otherMetric.metricValue());
+            }
+        }
+    }
+
     @Test
     public void testRecordEventPurgatoryTimeLimit() {
         Time time = new MockTime();
@@ -228,5 +343,9 @@ public class CoordinatorRuntimeMetricsImplTest {
 
     private static MetricName kafkaMetricName(Metrics metrics, String name, String... keyValue) {
         return metrics.metricName(name, METRICS_GROUP, "", keyValue);
+    }
+
+    private static MetricName otherGroupKafkaMetricName(Metrics metrics, String name, String... keyValue) {
+        return metrics.metricName(name, OTHER_METRICS_GROUP, "", keyValue);
     }
 }
